// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispute details screen renders correctly for dispute needing review 1`] = `
<Actions
  id="dp_mock"
  onAccept={[MockFunction]}
>
  <CardFooter>
    <div
      className="woocommerce-card__footer"
    >
      <Link
        className="components-button is-button is-primary is-large"
        href="admin.php?page=wc-admin&path=%2Fpayments%2Fdisputes%2Fchallenge&id=dp_mock"
        type="wc-admin"
      >
        <a
          className="components-button is-button is-primary is-large"
          data-link-type="wc-admin"
          href="admin.php?page=wc-admin&path=%2Fpayments%2Fdisputes%2Fchallenge&id=dp_mock"
          onClick={[Function]}
        >
          Challenge Dispute
        </a>
      </Link>
      <ForwardRef(Button)
        isDefault={true}
        isLarge={true}
        onClick={[MockFunction]}
      >
        <button
          className="components-button is-button is-default is-large"
          onClick={[MockFunction]}
          type="button"
        >
          Accept Dispute
        </button>
      </ForwardRef(Button)>
    </div>
  </CardFooter>
</Actions>
`;

exports[`Dispute details screen renders correctly for dispute not needing review 1`] = `
<Actions
  id="dp_mock"
>
  <CardFooter>
    <div
      className="woocommerce-card__footer"
    >
      <Link
        className="components-button is-button is-primary is-large"
        href="admin.php?page=wc-admin&path=%2Fpayments%2Fdisputes%2Fchallenge&id=dp_mock"
        type="wc-admin"
      >
        <a
          className="components-button is-button is-primary is-large"
          data-link-type="wc-admin"
          href="admin.php?page=wc-admin&path=%2Fpayments%2Fdisputes%2Fchallenge&id=dp_mock"
          onClick={[Function]}
        >
          Challenge Dispute
        </a>
      </Link>
    </div>
  </CardFooter>
</Actions>
`;
